# scala-pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.adoc  LICENSE  README.adoc  README.md  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
pre_commit_hooks/: runner.py  sbt_fatal_warnings.py  sbt_github_actions.py  sbt_scalafix.py  sbt_scalariform.py  sbt_scalastyle.py  sbt_scapegoat.py  sbt_wartremover.py  scalafix.py  scalafmt.py  scalafmt_apply.py
