[metadata]
name = pre_commit_hooks
version = 0.8.0

[options]
packages = find:
install_requires =
    colorama
python_requires = >=3.6

[options.entry_points]
console_scripts =
    scalafmt = pre_commit_hooks.scalafmt:main
    sbt-fatal-warnings = pre_commit_hooks.sbt_fatal_warnings:main
    sbt-scalariform = pre_commit_hooks.sbt_scalariform:main
    sbt-scalastyle = pre_commit_hooks.sbt_scalastyle:main
    sbt-scapegoat = pre_commit_hooks.sbt_scapegoat:main
    sbt-wartremover = pre_commit_hooks.sbt_wartremover:main
