[metadata]
name = pre_commit_hooks
version = 0.8.0

[options]
packages = find:
install_requires =
    colorama
python_requires = >=3.6

[options.entry_points]
console_scripts =
    sbt-wartremover = pre_commit_hooks.sbt_wartremover:main
    scalafmt = pre_commit_hooks.scalafmt:main
    sbt-fatal-warnings = pre_commit_hooks.sbt_fatal_warnings:main
    sbt-github-actions = pre_commit_hooks.sbt_github_actions:main
