[metadata]
name = pre_commit_hooks
version = 0.5.0
long_description = file: README.adoc
long_description_content_type = text/plain
license = Apache-2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    colorama
python_requires = >=3.9

[options.entry_points]
console_scripts =
    sbt-wartremover = pre_commit_hooks.sbt_wartremover:main
    scalafmt = pre_commit_hooks.scalafmt:main
    sbt-fatal-warnings = pre_commit_hooks.sbt_fatal_warnings:main
    scalafmt-apply = pre_commit_hooks.scalafmt_apply:main
